# Chat-App

./: .env  .gitignore  chat_app.db  main.py  pyproject.toml  requirements.txt
app/: websocket.py
app/config/: auth.py  database.py
app/models/: models.py
app/routes/: auth.py  chat.py
app/services/: auth.py
static/: chat.js
templates/: chat.html  login.html  signup.html
