[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["OmarAlaraby <omar.alaraby23@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
jinja2 = "^3.1.6"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
passlib = "^1.7.4"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
